# GameMon

./: .gitignore  Cargo.toml  build-Gabe-Desktop.rs  build.rs  build.toml  build.txt  gamemon - Copy.ini  gamemon.ini  tray-example.rc
src/: ak_gui.rs  ak_io.rs  ak_run.rs  ak_utils.rs  deafaults_window.rs  ids.rs  main-Gabe-Desktop.rs  main.rs  main_o.rs  my_window.rs
